Enable kubeapilinter for GIE APIs (#1366)
* Enable kubeapilinter github action

* Fix findings on stable APIs

* Fix findings after rebase

--- a/config/crd/bases/inference.networking.k8s.io_inferencepools.yaml
+++ b/config/crd/bases/inference.networking.k8s.io_inferencepools.yaml
@@ -60,6 +60,7 @@ spec:
                       Group is the group of the referent.
                       The default value is "", representing the Core API group.
                     maxLength: 253
+                    minLength: 0
                     pattern: ^$|^[a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*$
                     type: string
                   kind:
@@ -156,6 +157,7 @@ spec:
                   kind: Status
                   name: default
             description: Status defines the observed state of InferencePool.
+            minProperties: 1
             properties:
               parent:
                 description: |-
@@ -256,6 +258,7 @@ spec:
                           default: gateway.networking.k8s.io
                           description: Group is the group of the referent.
                           maxLength: 253
+                          minLength: 0
                           pattern: ^$|^[a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*$
                           type: string
                         kind:
@@ -287,7 +290,10 @@ spec:
                   type: object
                 maxItems: 32
                 type: array
+                x-kubernetes-list-type: atomic
             type: object
+        required:
+        - spec
         type: object
     served: true
     storage: true
