feat: TargetPortNumber int32 to become TargetPorts []Port (#1354)
* TargetPortNumber int32 to become TargetPorts []Port

# Conflicts:
#	api/v1/inferencepool_types.go
#	api/v1/zz_generated.deepcopy.go
#	client-go/applyconfiguration/api/v1/inferencepoolspec.go

# Conflicts:
#	api/v1/zz_generated.deepcopy.go
#	client-go/applyconfiguration/api/v1/inferencepoolspec.go

* partially fix ut

# Conflicts:
#	pkg/epp/controller/inferencepool_reconciler_test.go

* change inferencepool ut temporarily

* change comments

* changed yaml

* added temporary fix

* Update api/v1/inferencepool_types.go

Co-authored-by: Rob Scott <rob.scott87@gmail.com>

* fixed ut and e2e to adopt naming change

* added listtype tag

* revert back:

* updated to include list map

* Update site-src/guides/inferencepool-rollout.md

Co-authored-by: Aslak Knutsen <aslak.tux@gmail.com>

* rebase

* partially fix conflicts

* rebase with conversion change

* updated generate

* added ut

* rebase main

* fixed merge error

* updated helm chart

* updated message

* updated to use alias

* fixed ut

* merge conflicts

* fixed kubectl cli linter

* make it back to pointer

* fixed kal linter

* fixed conversion

* revert v1a2 to use pointer

* change extension to be non-nil pointer

* make v1a2 the extension

* added godocs

* updated comments

* updated comments

* updated conversion

* added nil check

* added nil check

* fixed linter

---------

Co-authored-by: Rob Scott <rob.scott87@gmail.com>
Co-authored-by: Aslak Knutsen <aslak.tux@gmail.com>

--- a/config/charts/inferencepool/values.yaml
+++ b/config/charts/inferencepool/values.yaml
@@ -39,11 +39,12 @@ inferenceExtension:
   enableLeaderElection: false
 
 inferencePool:
-  targetPortNumber: 8000
+  targetPorts:
+    - number: 8000
   modelServerType: vllm # vllm, triton-tensorrt-llm
-  # modelServers: # REQUIRED
-    # matchLabels: 
-    #   app: vllm-llama3-8b-instruct
+  modelServers: # REQUIRED
+    matchLabels:
+      app: vllm-llama3-8b-instruct
 
 provider:
   name: none
