--- a/config/crd/bases/inference.networking.k8s.io_inferencepools.yaml
+++ b/config/crd/bases/inference.networking.k8s.io_inferencepools.yaml
@@ -70,6 +70,8 @@ spec:
                     description: |-
                       Kind is the Kubernetes resource kind of the referent.
 
+                      Required if the referent is ambiguous(e.g. service with one port is unambiguous).
+
                       Defaults to "Service" when not specified.
 
                       ExternalName services can refer to CNAME DNS records that may live
