feat(helm): add affinity and tolerations to epp-deployment (#1504)
* feat(helm): add affinity and tolerations to epp-deployment

Signed-off-by: Hyeonki Hong <hhk7734@gmail.com>

* docs(helm): add affinity and tolerations to inferencepool chart README

Signed-off-by: Hyeonki Hong <hhk7734@gmail.com>

* chore(helm): use `if` instead of `with`

Signed-off-by: Hyeonki Hong <hhk7734@gmail.com>

---------

Signed-off-by: Hyeonki Hong <hhk7734@gmail.com>

--- a/config/charts/inferencepool/templates/epp-deployment.yaml
+++ b/config/charts/inferencepool/templates/epp-deployment.yaml
@@ -50,8 +50,8 @@ spec:
           containerPort: 9003
         - name: metrics
           containerPort: 9090
-        {{- with .Values.inferenceExtension.extraContainerPorts }}
-        {{- toYaml . | nindent 8 }}
+        {{- if .Values.inferenceExtension.extraContainerPorts }}
+        {{- toYaml .Values.inferenceExtension.extraContainerPorts | nindent 8 }}
         {{- end }}
         livenessProbe:
           {{- if .Values.inferenceExtension.enableLeaderElection }}
@@ -77,9 +77,9 @@ spec:
           {{- end }}
           initialDelaySeconds: 5
           periodSeconds: 10
-        {{- with .Values.inferenceExtension.env }}
+        {{- if .Values.inferenceExtension.env }}
         env:
-        {{- toYaml . | nindent 8 }}
+        {{- toYaml .Values.inferenceExtension.env | nindent 8 }}
         {{- end }}
         volumeMounts:
         - name: plugins-config-volume
@@ -88,3 +88,11 @@ spec:
       - name: plugins-config-volume
         configMap:
           name: {{ include "gateway-api-inference-extension.name" . }}
+      {{- if .Values.inferenceExtension.affinity }}
+      affinity:
+        {{- toYaml .Values.inferenceExtension.affinity | nindent 8 }}
+      {{- end }}
+      {{- if .Values.inferenceExtension.tolerations }}
+      tolerations:
+        {{- toYaml .Values.inferenceExtension.tolerations | nindent 8 }}
+      {{- end }}
