--- a/config/charts/inferencepool/templates/epp-sa-token-secret.yaml
+++ b/config/charts/inferencepool/templates/epp-sa-token-secret.yaml
@@ -2,11 +2,63 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.inferenceExtension.monitoring.secret.name }}
+  name: {{ .Release.Namespace }}-{{ .Release.Name }}-metrics-reader-secret
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "gateway-api-inference-extension.labels" . | nindent 4 }}
   annotations:
-    kubernetes.io/service-account.name: {{ include "gateway-api-inference-extension.name" . }}
+    kubernetes.io/service-account.name: {{ .Release.Namespace }}-{{ .Release.Name }}-metrics-reader-sa
 type: kubernetes.io/service-account-token
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: {{ .Release.Namespace }}-{{ .Release.Name }}-metrics-reader-secret-read
+rules:
+- resources:
+  - secrets
+  apiGroups: [""]
+  verbs: ["get", "list", "watch"]
+  resourceNames: [{{ printf "%s-%s-metrics-reader-secret" .Release.Namespace .Release.Name | quote }}]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: gmp-system:collector:{{ .Release.Namespace }}-{{ .Release.Name }}-metrics-reader-secret-read
+roleRef:
+  name: {{ .Release.Namespace }}-{{ .Release.Name }}-metrics-reader-secret-read
+  kind: ClusterRole
+  apiGroup: rbac.authorization.k8s.io
+subjects:
+- name: collector
+  namespace: gmp-system
+  kind: ServiceAccount
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: {{ .Release.Namespace }}-{{ .Release.Name }}-metrics-reader
+rules:
+- nonResourceURLs:
+  - /metrics
+  verbs:
+  - get
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: {{ .Release.Namespace }}-{{ .Release.Name }}-metrics-reader-sa
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: {{ .Release.Namespace }}-{{ .Release.Name }}-metrics-reader-role-binding
+subjects:
+- kind: ServiceAccount
+  name: {{ .Release.Namespace }}-{{ .Release.Name }}-metrics-reader-sa
+  namespace: {{ .Release.Namespace }}
+roleRef:
+  kind: ClusterRole
+  name: {{ .Release.Namespace }}-{{ .Release.Name }}-metrics-reader
+  apiGroup: rbac.authorization.k8s.io
 {{- end }}
