--- a/config/charts/inferencepool/values.yaml
+++ b/config/charts/inferencepool/values.yaml
@@ -53,8 +53,6 @@ inferenceExtension:
     
     gke:
       enabled: false
-      # Set to true if the cluster is an Autopilot cluster.
-      autopilot: false
 
 inferencePool:
   targetPorts:
@@ -72,3 +70,8 @@ inferencePool:
 provider:
   name: none
 
+  # GKE-specific configuration.
+  # This block is only used if name is "gke".
+  gke:
+    # Set to true if the cluster is an Autopilot cluster.
+    autopilot: false
