fix tracing configuration in helm epp-deployment template (#1777)
Signed-off-by: sallyom <somalley@redhat.com>

--- a/config/charts/inferencepool/templates/epp-deployment.yaml
+++ b/config/charts/inferencepool/templates/epp-deployment.yaml
@@ -62,11 +62,10 @@ spec:
         - "--{{ .name }}"
         - "{{ .value }}"
         {{- end }}
-        - "--tracing"
         {{- if .Values.inferenceExtension.tracing.enabled }}
-        - "true"
+        - --tracing=true
         {{- else }}
-        - "false"
+        - --tracing=false
         {{- end }}
         {{- if not .Values.inferenceExtension.monitoring.prometheus.enabled }}
         - --metrics-endpoint-auth=false
